[package]
name = "keypost-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "^0.13"
curve25519-dalek = { version = "^3.1", default-features = false, features = ["std"] }
opaque-ke = { git = "https://github.com/novifinancial/opaque-ke", ref = "v2.0.0-pre.2" }
pkce = "^0.1"
reqwest = { version = "^0.11", features = ["blocking", "json"] }
rpassword = "^5.0"
rustyline = "^8.2"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
sha2 = "^0.9"
