[package]
name = "keypost-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "^0.13"
chacha20poly1305 = "=0.10.0-pre"
curve25519-dalek = { version = "=4.0.0-pre.1", default-features = false, optional = true }
elliptic-curve = "^0.12"
opaque-ke = { git = "https://github.com/novifinancial/opaque-ke", tag = "v2.0.0" }
p256 = { version = "^0.11", default-features = false, features = ["hash2curve", "voprf"] }
pkce = "^0.1"
rand = { version = "^0.8", default-features = false, features = ["std"] }
reqwest = { version = "^0.11", features = ["blocking", "json"] }
rpassword = "^5.0"
rustyline = "^9.1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
sha2 = "^0.9"
zeroize = { version = "1.5", features = ["zeroize_derive"] }

[features]
ristretto255 = []
